remove visibility and fix cards overflowing

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,159 +1,194 @@
 button {
-  cursor: pointer;
+    cursor: pointer;
 }
 .ukm-button {
-  font: normal normal var(--font-weight-semibold) 0.875em/1.3125em Poppins;
-  display: flex;
-  padding: 0.875rem 1.2rem;
-  border: none;
-  text-decoration: none;
-  @media (min-width: 992px) {
-    display: block;
-  }
-
-  > .half-color {
-    background: hsl(var(--color-neutral-grey-100));
-  }
-
-  > .icon {
-    //   width: .5rem;
-    //   margin: auto;
-    @media (min-width: 992px) {
-      width: 1.5rem;
-      height: auto;
-      margin-left: 0;
+    font: normal normal var(--font-weight-semibold) 0.875em / 1.3125em Poppins;
+    display: flex;
+    padding: 0.875rem 1.2rem;
+    border: none;
+    text-decoration: none;
+    @media(min-width: 992px) {
+        display: block;
     }
-  }
+
+    > .half-color {
+        background: hsl(var(--color-neutral-grey-100));
+    }
+
+    > .icon {
+        @media(min-width: 992px) {
+            width: 1.5rem;
+            height: auto;
+            margin-left: 0;
+        }
+    }
     span {
-      color: hsl(var(--color-neutral-grey-100));
+        color: hsl(var(--color-neutral-grey-100));
     }
-  > .text {
-    color: hsl(var(--color-neutral-grey-100));
-    margin-right: 0.625rem;
-    font-size: 0.875em;
-  }
-
-  &-primary {
-    color: hsl(var(--color-primary-blue-50, var(--color-primary-orange-50)));
-    background: linear-gradient(
-      45deg,
-      hsl(var(--color-primary-blue-800, var(--color-primary-orange-900))),
-      hsl(var(--color-primary-blue-600, var(--color-primary-orange-900)))
-    );
-    box-shadow: 0 0.5rem 1rem
-      hsla(var(--color-primary-blue-600, var(--color-primary-orange-600)), 0.25);
-    border-radius: 1.5625rem;
-    // top: 16rem;
-    // left: 1.5rem;
-
-    @media (min-width: 992px) {
-      top: 0rem;
-      left: 0;
+    > .text {
+        color: hsl(var(--color-neutral-grey-100));
+        margin-right: 0.625rem;
+        font-size: 0.875em;
     }
-  }
 
-  &-front {
-    z-index: 2;
-    position: relative;
-    width: 14.625rem;
-    height: 3rem;
-    padding: 0.875rem 1rem 0.875rem 1.4rem;
-    text-align: center;
+    &-primary {
+        color: hsl(var(--color-primary-blue-50, var(--color-primary-orange-50)));
+        background: linear-gradient(45deg, hsl(var(--color-primary-blue-800, var(--color-primary-orange-900))), hsl(var(--color-primary-blue-600, var(--color-primary-orange-900))));
+        box-shadow: 0 0.5rem 1rem hsla(var(--color-primary-blue-600, var(--color-primary-orange-600)), 0.25);
+        border-radius: 1.5625rem;
 
-    @media (min-width: 992px) {
-      width: 22rem;
-      height: 4.5rem;
-      font: normal normal var(--font-weight-semibold) 1.375rem/2.0625rem Poppins;
-      border-radius: 3.125rem;
-      padding: 1.2rem;
+        @media(min-width: 992px) {
+            top: 0;
+            left: 0;
+        }
     }
-  }
 
-  &-secondary {
-    padding-left: 1.3rem;
-    color: hsla(225, 43%, 5%);
-    background: none;
-    // top: 15.5rem;
-    // left: 1.5rem;
-    @media (min-width: 992px) {
-      padding-left: 2.2rem;
-      color: hsla(var(--color-even-darker-blue));
-      top: 0rem;
-      text-align: left;
+    &-front {
+        z-index: 2;
+        position: relative;
+        width: 14.625rem;
+        height: 3rem;
+        padding: 0.875rem 1rem 0.875rem 1.4rem;
+        text-align: center;
+
+        @media(min-width: 992px) {
+            width: 22rem;
+            height: 4.5rem;
+            font: normal normal var(--font-weight-semibold) 1.375rem / 2.0625rem Poppins;
+            border-radius: 3.125rem;
+            padding: 1.2rem;
+        }
     }
-  }
 
-  &-footer {
-    width: 13.6875rem;
-    padding-left: 1.3rem;
-    color: hsla(225, 43%, 5%);
-    background: none;
-  }
+    &-secondary {
+        padding-left: 1.3rem;
+        color: hsla(225, 43%, 5%);
+        background: none;
+        // top: 15.5rem;
+        // left: 1.5rem;
+        @media(min-width: 992px) {
+            padding-left: 2.2rem;
+            color: hsla(var(--color-even-darker-blue));
+            top: 0;
+            text-align: left;
+        }
+    }
+
+    &-footer {
+        width: 13.6875rem;
+        padding-left: 1.3rem;
+        color: hsla(225, 43%, 5%);
+        background: none;
+    }
 }
 
 .vis-mer-btn {
-  width: 10.625rem;
-  padding-left: 3.2rem;
+    width: 10.625rem;
+    padding-left: 3.2rem;
 
-  @media (min-width: 992px) {
-    width: 22rem;
-    padding-left: 8rem;
-    padding-top: 1.2rem;
-  }
+    @media(min-width: 992px) {
+        width: 22rem;
+        padding-left: 8rem;
+        padding-top: 1.2rem;
+    }
 }
 
 .slideSpan {
-  display: inline;
-  text-indent: 0.15rem;
-  @media (min-width: 992px) {
-    text-indent: 0.5rem;
-  }
+    display: inline;
+    text-indent: 0.15rem;
+    @media(min-width: 992px) {
+        text-indent: 0.5rem;
+    }
 
-  span {
-    animation: topToBottom 12.5s linear infinite 0s;
-    opacity: 0;
-    overflow: hidden;
-    position: absolute;
+    span {
+        animation: topToBottom 12.5s linear infinite 0s;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
 
-    &:nth-child(2) {
-      animation-delay: 2.5s;
+        &:nth-child(2) {
+            animation-delay: 2.5s;
+        }
+        &:nth-child(3) {
+            animation-delay: 5s;
+        }
+        &:nth-child(4) {
+            animation-delay: 7.5s;
+        }
+        &:nth-child(5) {
+            animation-delay: 10s;
+        }
     }
-    &:nth-child(3) {
-      animation-delay: 5s;
-    }
-    &:nth-child(4) {
-      animation-delay: 7.5s;
-    }
-    &:nth-child(5) {
-      animation-delay: 10s;
-    }
-  }
 }
 
 @keyframes topToBottom {
-  0% {
-    opacity: 0;
-  }
-  5% {
-    opacity: 0;
-    transform: translateY(-50px);
-  }
-  10% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-  25% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-  30% {
-    opacity: 0;
-    transform: translateY(50px);
-  }
-  80% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
+    0% {
+        opacity: 0;
+    }
+    5% {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    10% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    25% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    30% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    80% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.perfect-btn {
+    border-radius: 50%;
+    line-height: 1.5rem;
+    cursor: pointer;
+    font-weight: 500;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+
+    &:hover {
+      text-decoration: none;
+    }
+}
+
+.btn-large {
+    border-radius: 1.75rem;
+    font-size: 1.25rem;
+    padding: 1rem 2rem;
+
+    &:hover {
+        box-shadow: 0 .5rem .9375rem rgb(0 0 0 / 20%);
+        background: hsl(var(--color-primary-blue-800),0.7);
+    }
+}
+
+.btn-blue {
+    // background-color: #23272a;
+    // background-color: hsl(var(--color-primary-blue-900));
+    // color: #fff;
+    // color: var(--white);
+
+    color: hsl(var(--color-primary-blue-50, var(--color-primary-orange-50)));
+    background: linear-gradient(45deg , hsl(var(--color-primary-blue-800, var(--color-primary-orange-900))), hsl(var(--color-primary-blue-600, var(--color-primary-orange-900))));
+
+  &:hover {
+    color: white;
   }
 }
